--- a/index.html
+++ b/index.html
@@ -12,18 +12,14 @@
      <!-- testata della pagina dove metteremo le opzioni da scegliere  -->
     <header>
         <section>
-            <h1>campo minato</h1>
+            <h1>CAMPO MINATO</h1>
         </section>
-        <section>
-            <div class="dif_container">
                 <select name="" id="sezione_difficolta">
                     <option value="1">facile</option>
                     <option value="2">medio</option>
-                    <option value="3">difficle</option>
+                    <option value="3">difficile</option>
                 </select>
-                <button id="play">gioca</button>
-            </div>
-        </section>
+                <button id="play">Gioca</button>
     </header>
    <!-- sezione con griglia   -->
     <main>
@@ -36,7 +32,6 @@
             <span id="num_match"></span>
             <span id="risultato_match"></span>
             <span id="total_point"></span>
-            <span>Gioca ancora</span>
         </div>
        
     </footer>
